stop stretching resume images

--- a/assets/css/resumes/resumes.css
+++ b/assets/css/resumes/resumes.css
@@ -36,7 +36,10 @@ a.formatlink {
 .jobname img {
   border: 1px solid #165f1d;
   float: left;
+  left: 0;
   margin: 2px 10px 5px 2px;
+  position: static;
+  width: auto;
 }
 
 .jobdesc {
